# aldegonde

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  IMPROVEMENTS_TODO.md  LICENSE  Makefile  README.rst  TODO  analysis_hypotheses.md  car_replacement_decision_tree.md  gematria.py  lib.py  liber-primus__transcription--master.txt  lp.ipynb  lp.py  lp_battery1.py  lp_battery10.py  lp_battery11.py  lp_battery12.py  lp_battery13.py  lp_battery14.py  lp_battery15.py  lp_battery16.py  lp_battery17.py  lp_battery18.py  lp_battery2.py  lp_battery3.py  lp_battery4.py  lp_battery5.py  lp_battery6.py  lp_battery7.py  lp_battery8.py  lp_battery9.py  lp_pattern_analysis.py  lp_repeat_analysis.py  lp_section_data.py  lp_structure.py  page0-58.txt  pyproject.toml  (+7 more)
.github/: dependabot.yml
.github/workflows/: pur.yml  tox.yml
aldegonde/: combo  lib.py
aldegonde/algorithm/: __init__.py  autokey.py  monoalphabet.py  rot.py  test_autokey.py  test_quagmire.py  test_vigenere.py  tr.py  vigenere.py
aldegonde/alphabet/: __init__.py  alphabet.py
aldegonde/analysis/: friedman.py  isomorph.py  kappa.py  kasiski.py  modchecker.py  split.py  test_kappa.py  test_kasiski.py
aldegonde/fitness/: ioc.py
aldegonde/grams/: bigram_diagram  bigram_diagram.py  color.py  grams.py  test_grams.py
aldegonde/math/: factor.py  modular.py  primes.py  totient.py
aldegonde/maths/: factor.py
aldegonde/stats/: __init__.py  chi.py  dist.py  doublets.py  entropy.py  eois.py  gtest.py  hamming.py  ioc.py  ngrams.py  repeats.py  test_doublets.py  test_eois.py  test_hamming.py  test_ioc.py  test_ngrams.py  test_repeats.py
aldegonde/structures/: alphabet.py  cicada3301.py  sequence.py  test_alphabet.py  test_cicada3301.py  test_sequence.py
cohort/: 1.py
data/: README.rst  lib.py  liber-primus__transcription--master.md  liber-primus__transcription--master.txt  page0-54.txt  page0-58.txt
docs/: conf.py  index.rst  lag5-phenomenon.md  liber-primus-d5-anomaly.md  lp_doublet_hypotheses.md  lp_lag5_findings.md  lp_structure_findings.md  lp_word_length_analysis.md
examples/: crack_affine.py  crack_masc.py  crack_shift.py  divtable.py  exptable.py  findperiod.py  gorod_krovi_cipher12.py  guballa.py  kal.py  lp_analysis.py  lp_delta_analysis.py  lp_lag5_analysis.py  lp_lag5_attack.py  multable.py  simanneal_masc.py  simanneal_pasc.py  welcome.py
experiments/: aligned_kappa_nulls.py  alignment_scan.py  anchored_repeats.py  anomaly_scan.py  backref_model.py  boundary_tiling.py  cotiling_test.py  covert_channels.py  custom_autokey_analysis.py  deep_scan.py  dependence_scan.py  depth_search.py  doublet_context_test.py  doublet_insertion_test.py  doublet_spacing.py  doublet_word_position.py  ea_crib.py  five_block_simulator.py  fourpoint_dragnet.py  fourth_order_ciphers.py  gap_audit.py  gf29_battery.py  group_size_tests.py  inner_layer_sim.py  isomorph_corrected.py  jstream_battery.py  lag5_digraph_chase.py  lag5_freshlook.py  lp_attack_battery.py  lp_bigram_compare.py  lp_cryptodiagnostics.py  lp_deep_analysis.py  lp_doublet_detailed.py  lp_ea_hypothesis.py  mark_forensics.py  mechanism_fingerprint.py  missed_tests.py  ocr_verify.py  pattern_census.py  phrase_repeats.py  (+14 more)
hypotheses/: AGENTS.md  README.md  TEMPLATE.md  accumulator-autokey.md  affine-autokey.md  analyze_repeats.py  autokey-plus-substitution.md  autokey-with-keyword.md  beaufort-autokey-ea.md  bifid-fractionation.md  block-cipher.md  ciphertext-autokey.md  crib_single_letter_words.py  cryptodiagnostics-page0-58.md  disprove_autokey_split.py  doublet-marker-rune-ea.md  doublet-spacing-poisson.md  encoding-only.md  explicit-doublet-avoidance.md  first-difference.md  five-block-boundary.md  gematria-primus-arithmetic.md  gp_prime_cipher.py  hill-cipher-per-word.md  homophonic-substitution.md  lag5-back-reference.md  lag5-digraph-structure.md  model_tester.py  monoalphabetic-substitution.md  multi-layer-autokey.md  page-reset-keystream.md  periodic-polyalphabetic.md  plaintext-autokey.md  playfair-variant.md  position-within-word.md  prime-value-autokey.md  repeated-phrase-dju-bei.md  running-key-math-sequence.md  running-key-text.md  search_multiplier_table.py  (+10 more)
notebooks/: alice.ipynb  lp.ipynb
src/: lp_section_data.py
src/aldegonde/: __init__.py  auto.py  c3301.py  column.py  disk.py  exceptions.py  masc.py  pasc.py  pgsc.py  rail.py  trns.py  validation.py
src/aldegonde/algorithm/: auto.py  autokey.py  masc.py  monoalphabet.py  pasc.py  pgsc.py  quagmire.py  rot.py  test_auto.py  test_autokey.py  test_masc.py  test_pasc.py  test_quagmire.py  test_vigenere.py  vigenere.py
src/aldegonde/analysis/: __init__.py  autokey.py  c3301twist.py  coincidence.py  delta.py  friedman.py  guballa.py  indepth.py  isomorph.py  kappa.py  kasiski.py  krakup.py  mealy_cipher.py  modchecker.py  rune_frequency.py  split.py  table.py  test_kappa.py  twist.py
src/aldegonde/fitness/: ioc.py
src/aldegonde/grams/: bigram_diagram.py  color.py
src/aldegonde/maths/: __init__.py  factor.py  modular.py  moebius.py  primes.py  totient.py
src/aldegonde/stats/: __init__.py  chi.py  compare.py  dist.py  doublets.py  entropy.py  eois.py  gtest.py  hamming.py  ioc.py  isomorph.py  kappa.py  mioc.py  ngrams.go  ngrams.py  nulls.py  position.py  repeats.py  resample.py  test_chi.py  test_compare.py  test_dist.py  test_doublets.py  test_eois.py  test_gtest.py  test_hamming.py  test_ioc.py  test_isomorph.py  test_ngrams.py  test_repeats.py  zscore.py
src/aldegonde/structures/: alphabet.py  cicada3301.py  sequence.py  test_alphabet.py  test_cicada3301.py  test_sequence.py
tests/aldegonde/: test_auto.py  test_auto.py,cover  test_c3301.py  test_c3301.py,cover  test_disk.py  test_disk.py,cover  test_error_handling.py  test_exceptions.py  test_hypothesis.py  test_masc.py  test_masc.py,cover  test_pasc.py  test_pasc.py,cover  test_pgsc.py  test_pgsc.py,cover  test_rail.py  test_trns.py  test_trns.py,cover
tests/aldegonde/algorithm/: test_auto.py  test_masc.py  test_pasc.py  test_pgsc.py
tests/aldegonde/analysis/: test_coincidence.py  test_delta.py  test_friedman.py  test_split.py  (+9 more)
(+31 files in other folders)
