[project]
name = "aldegonde"
description = "Classical Cryptography Library"
version = "0.0.3"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["cryptanalysis", "cryptology", "cryptography"]
authors = [
  {email = "michel@oosterhof.net", name = "Michel Oosterhof"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/micheloosterhof/aldegonde"
documentation = "https://readthedocs.org"
repository = "https://github.com/micheloosterhof/aldegonde"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.mypy]
ignore_missing_imports      = true
warn_unused_configs         = true
no_implicit_optional        = true
show_column_numbers         = true
show_error_codes            = true
strict_optional             = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
disallow_incomplete_defs    = true
disallow_any_unimported     = true
strict_equality             = true
disallow_untyped_decorators = true
disallow_subclassing_any    = true

# These are too strict for us at the moment

check_untyped_defs          = true
disallow_untyped_defs       = false
disallow_any_decorated      = false
disallow_any_explicit       = false
disallow_any_expr           = false
disallow_any_generics       = false
disallow_untyped_calls      = false
warn_unused_ignores         = false


[[tool.mypy.overrides]]
module = [
    "scipy"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["A", "B", "BLE", "C", "C4", "COM", "E", "EM", "EXE", "F", "FBT", "I", "ICN", "PIE", "PYI", "RET", "SIM", "T20", "TID", "TCH", "TRY", "FIX", "UP", "YTT", "W"]
ignore = ["E501", "E741", "UP007", "B905", "T201"]

# Assume Python 3.10.
target-version = "py310"

[tool.isort]
profile = "black"
known_first_party = ["aldegonde"]
sections=["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.pylint]
disable = ["invalid-name"]



[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
