[project]
name = "aldegonde"
description = "Classical Cryptography Library"
version = "0.0.3"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["cryptanalysis", "cryptology", "cryptography"]
authors = [
  {email = "michel@oosterhof.net", name = "Michel Oosterhof"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy==2.2.3",
  "pip==24.3.1",
  "scipy==1.15.2",
  "setuptools==75.6.0",
  "wheel==0.45.1",
]

[project.optional-dependencies]
tests =[
  "black==24.10.0",
  "build==1.2.2.post1",
  "coverage==7.6.10",
  "mypy-extensions==1.0.0",
  "mypy==1.15.0",
  "pipdeptree==2.24.0",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "ruff==0.9.10",
  "tox==4.23.2",
  "twine==6.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/micheloosterhof/aldegonde"
documentation = "https://readthedocs.org"
repository = "https://github.com/micheloosterhof/aldegonde"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.mypy]
ignore_missing_imports      = true
warn_unused_configs         = true
no_implicit_optional        = true
show_column_numbers         = true
show_error_codes            = true
strict_optional             = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
disallow_incomplete_defs    = true
disallow_any_unimported     = true
strict_equality             = true
disallow_untyped_decorators = true
disallow_subclassing_any    = true
check_untyped_defs          = true
disallow_any_generics       = true
disallow_untyped_calls      = true
disallow_untyped_defs       = true

# These are too strict for us at the moment

disallow_any_decorated      = false
disallow_any_explicit       = false
disallow_any_expr           = false
warn_unused_ignores         = false


[[tool.mypy.overrides]]
module = [
    "scipy"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
lint.select = ["A", "B", "BLE", "C", "C4", "COM", "E", "EM", "EXE", "F", "FBT", "I", "ICN", "PIE", "PYI", "RET", "SIM", "T20", "TID", "TCH", "TRY", "FIX", "UP", "YTT", "W"]
lint.ignore = ["E501", "E741", "UP007", "B905", "T201"]

# Assume Python 3.10.
target-version = "py310"

[tool.isort]
profile = "black"
known_first_party = ["aldegonde"]
sections=["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.pylint]
disable = ["invalid-name"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
