[project]
name = "aldegonde"
description = "Classical Cryptography Library"
dynamic = ["version"]
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["cryptanalysis", "cryptology", "cryptography"]
authors = [
  {email = "michel@oosterhof.net", name = "Michel Oosterhof"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "numpy==2.2.6",
  "scipy==1.15.3",
]

[project.optional-dependencies]
dev = [
  "build==1.3.0",
  "coverage==7.13.0",
  "hypothesis>=6.100.0",
  "mypy-extensions==1.1.0",
  "mypy==1.19.1",
  "pipdeptree==2.28.0",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "ruff==0.14.10",
  "tox==4.30.3",
  "twine==6.2.0",
]
docs = [
  "sphinx>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.urls]
homepage = "https://github.com/micheloosterhof/aldegonde"
documentation = "https://readthedocs.org"
repository = "https://github.com/micheloosterhof/aldegonde"
changelog = "https://github.com/micheloosterhof/aldegonde/blob/master/CHANGELOG.md"

[tool.mypy]
ignore_missing_imports      = true
warn_unused_configs         = true
no_implicit_optional        = true
show_column_numbers         = true
show_error_codes            = true
strict_optional             = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
disallow_incomplete_defs    = true
disallow_any_unimported     = true
strict_equality             = true
disallow_untyped_decorators = true
disallow_subclassing_any    = true
check_untyped_defs          = true
disallow_any_generics       = true
disallow_untyped_calls      = true
disallow_untyped_defs       = true

# These are too strict for us at the moment

disallow_any_decorated      = false
disallow_any_explicit       = false
disallow_any_expr           = false
warn_unused_ignores         = false


[[tool.mypy.overrides]]
module = [
    "scipy"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
lint.select = ["A", "B", "BLE", "C", "C4", "COM", "E", "EM", "EXE", "F", "FBT", "I", "ICN", "PIE", "PYI", "RET", "SIM", "T20", "TID", "TCH", "TRY", "FIX", "UP", "YTT", "W"]
lint.ignore = ["E501", "E741", "UP007", "B905", "T201", "TRY301", "C901", "COM812"]

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.format]
# Use double quotes for strings (consistent with previous black formatting)
quote-style = "double"
# Indent with spaces, not tabs
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Unix-style line endings
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["aldegonde"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pylint]
disable = ["invalid-name"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aldegonde = ["py.typed"]
